src/components/Card.scss
@import "~@nti/style-common";

%icon-external-link { background-image: url(./assets/extern-link.png); }
%icon-external-link-hover { background-image: url(./assets/extern-link_hover.png); }
%circle-white-check-large { background-image: url(./assets/circle-check-white-large.png); }

.content-link.related-work-ref {
	$gap: 20px;
	$icon-width: 100px;
	$icon-ratio: 1.25;

	color: $primary-grey;
	text-decoration: inherit;
	font-family: $body-font-family;
	//
	position: relative;
	overflow: hidden;
	display: block;
	background: #fafdff;
	border: 1px solid #e2f2fc;
	margin: 15px 0;
	padding: 15px;
	padding-left: $icon-width + $gap;
	min-height: ceil($icon-width * $icon-ratio);
	//
	word-wrap: break-word;
	word-break: break-word;
	hyphens: auto;

	.icon {
		position: absolute;
		top: 0;
		left: 0;
		width: $icon-width;
		height: ceil($icon-width * $icon-ratio);
		margin: 0;
		box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.1);
		// background-color: #f0f0f0;
	}

	h5 {
		@include limit-lines($line-height: 1.333);

		font-size: rem-calc(15px);
		font-weight: 600;
		line-height: 1.333;
		margin: 0;
		margin-top: -0.25rem;
	}

	hr {
		margin: 0;
		border: 0;
	}

	.label {
		//Design wants the by-line to be one line and ellipsed
		display: block;
		text-align: left;

		//This is dumb... but i'm having a hard time figuring out why "white-space: nowrap"
		//forces the label to overflow and drive the width wider than the container. :|
		//So... use the two-line solution clamped to one.
		white-space: normal;

		@include limit-lines($lines: 1, $line-height: 1.4);

		margin: 0;
		padding: 0;
		background: none;
		color: $primary-blue;
		margin-bottom: 0.25em;
		font-size: rem-calc(10px);
	}

	.label, .extra-labels {
		text-transform: uppercase;
		font-family: $body-font-family;
		font-weight: 600;
		font-size: rem-calc(10px);
		line-height: 1.4;
	}

	.extra-labels {
		&:empty { display: none; }

		position: absolute;
		margin: 0;
		left: $icon-width + $gap;
		bottom: 5px;
		color: $tertiary-grey;

		a, .nti-link-to-path {
			color: $primary-blue;
		}
	}

	.description {
		@include limit-lines($line-height: 1.4);

		min-height: 2.8em;
		font-size: rem-calc(13px);
		font-weight: 400;
		line-height: 1.4;

		//don't crop decenders that stick out the left side:}
		margin-left: -2px;
		padding-left: 2px;
	}

	&.external {
		.icon > div {
			@extend %icon-external-link-hover;

			top: 0;
			right: 0;
			position: absolute;
			content: '';
			width: 30px;
			height: 30px;
			display: inline-block;
		}
	}

	&.seen {
		.icon {
			&::after, &::before, {
				content: '';
				display: block;
				position: absolute;
				background: {
					color: rgba(0, 0, 0, 0.5);
					position: center center;
					repeat: no-repeat;
				}
			}

			&::before {
				top: 0;
				right: 0;
				bottom: 0;
				left: 0;
			}

			&::after {
				@extend %circle-white-check-large;
				$p: 50%;
				$s: 40px;
				$o: -20px;

				top: $p;
				left: $p;
				width: $s;
				height: $s;
				margin: {
					top: $o;
					left: $o;
				}

				background-color: rgba(0, 0, 0, 0.6);
				border-radius: $s;
			}
		}
	}

	@include respond-to(handhelds) {
		// $icon-ratio: 1.375;
		$icon-width: 95px;
		$gap: 10px;

		margin: 10px 0;
		padding-left: $icon-width + $gap;
		min-height: max(120px, ceil($icon-width * $icon-ratio));

		.icon {
			width: $icon-width;
			height: 100%;
		}

		h5 {
			font-size: rem-calc(13px);
		}

		.extra-labels {
			margin: 0 !important;
			left: $icon-width + $gap;
			bottom: 4px;
		}
	}
}

